--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "stylelint": "^13.6.1",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-order": "^4.1.0"
   },
   "dependencies": {
     "vue": "^2.6.11",
