Added lightbox to gallery as well as burger and sidebar

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -92,7 +92,7 @@
 		"no-extra-semicolons": true,
 		"no-invalid-double-slash-comments": true,
 		"no-missing-end-of-source-newline": true,
-		"number-leading-zero": "never",
+		"number-leading-zero": "always",
 		"number-no-trailing-zeros": true,
 		"property-case": "lower",
 		"property-no-unknown": true,
