--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
+    "stylelint": "^13.6.1",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-order": "^4.1.0",
     "vue-loader": "^15.9.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "stylelint": "^13.6.1",
-    "stylelint-config-prettier": "^8.0.1",
-    "stylelint-order": "^4.1.0"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "vue": "^2.6.11",
+    "vue-cool-lightbox": "^2.4.1",
     "vue-router": "^3.3.4"
   }
 }
