--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "vue": "^2.6.11",
+    "vue-animate-scroll": "^0.1.5",
     "vue-cool-lightbox": "^2.4.1",
     "vue-router": "^3.3.4"
   }
