--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "lazysizes": "^5.2.2",
     "vue": "^2.6.11",
     "vue-animate-scroll": "^0.1.5",
     "vue-cool-lightbox": "^2.4.1",
