--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rimraf build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development",
+    "start": "node server.js",
     "build": "npm run clean && webpack --mode production",
     "deploy": "gh-pages -d build"
   },
@@ -35,7 +35,9 @@
   },
   "dependencies": {
     "cname-webpack-plugin": "^2.0.1",
+    "connect-history-api-fallback": "^1.6.0",
     "copy-webpack-plugin": "^6.1.1",
+    "express": "^4.17.1",
     "file-loader": "^6.1.0",
     "gh-pages": "^3.1.0",
     "lazysizes": "^5.2.2",
