--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build": "npm run clean && webpack --mode production",
+    "build": "yarn run clean && webpack --mode production",
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
