--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rimraf build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "webpack-dev-server --mode development",
     "build": "yarn run clean && webpack --mode production"
   },
   "devDependencies": {
@@ -38,7 +38,6 @@
     "copy-webpack-plugin": "^6.1.1",
     "express": "^4.17.1",
     "file-loader": "^6.1.0",
-    "gh-pages": "^3.1.0",
     "lazysizes": "^5.2.2",
     "vue": "^2.6.11",
     "vue-animate-scroll": "^0.1.5",
